--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottom"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentBottom="true">
         
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:layout_width="match_parent"
@@ -25,7 +25,8 @@
             app:itemIconTint="@color/colorAccent"
             app:labelVisibilityMode="unlabeled"
             android:background="?android:windowBackground"
-            app:menu="@menu/bottom_navigation"
+            app:menu="@menu/bottom_navigation"/>
 
+    </com.google.android.material.appbar.AppBarLayout>
 
 </RelativeLayout>
